TrackingSection+User+UserAnnotation

--- a/FriendsCircle/FriendsCircle/Info.plist
+++ b/FriendsCircle/FriendsCircle/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Allow us to access your current location so we can autofill your start/end point.</string>
 </dict>
 </plist>
